Updated read me file and styles

--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-GB">
     {{ partial "head.html" . }}
-  <body>
+  <body id="contact-page">
       <header>{{ partial "header.html" . }}</header>
     <!-- Here is our main header that is used across all the pages of our website -->
     <main>
@@ -9,42 +9,63 @@
             <div class="row">
                 <div class="col contact__side-content text-center contact__top-content" data-aos="fade-up" data-aos-duration="1000">
                     <h2>Do you have more content that could be added to <b>our top</b>?</h2>
-                    <p class="lead"> Fill out this form and we'll get back to you soon. </p>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-8 order-md-1 contact__bottom-content">
-                <h4 class="mb-3" data-aos="fade-up" data-aos-duration="1000">Your Details</h4>
-                <form class="needs-validation" novalidate="" id="form">
-                    <div class="mb-3" data-aos="fade-up" data-aos-duration="1000">
-                        <label for="fullName">Your Name *</label>
-                        <input type="text" class="contact__fields" id="fullname" placeholder="Your Full Name" value="" required="">
-                        <div id="invalid" class="error">
+                <div class="col-8">
+                    <h3> Let's talk!</h3>
+                    <p>Fill out this form and we'll get back to you soon. </p>
+                <div class="mb-3">
+                    <h4>Your Details</h4>
+                </div>
+                    <form class="needs-validation" novalidate="" id="form">
+                        <div class="mb-3">
+                            <label for="fullName">Your Name *</label>
+                            <input type="text" class="contact__fields" id="fullname" placeholder="Your Full Name" value="" required="">
+                            <div id="invalid" class="error">
+                            </div>
                         </div>
-                    </div>
-                    <div class="mb-3" data-aos="fade-up" data-aos-duration="1000">
-                    <label for="email">Email *</label>
-                    <input type="email" class="contact__fields" id="email" placeholder="you@example.com" required="">
-                    <div id="invalid-email" class="error">
-                    </div>
-                    <div class="mb-3" data-aos="fade-up" data-aos-duration="1000">
-                    <label for="subject">Subject </label>
-                    <input type="subject" class="contact__fields" id="subject" placeholder="Subject" required="">
-                    <div id="invalid-email" class="error">
-                    </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="form-group" data-aos="fade-up" data-aos-duration="1000"> 
-                                <label for="form_message">Your Message*</label> 
-                                <textarea id="form_message" name="message" class="contact__fields contact__message" placeholder="Please write your message here." rows="4" required="required" data-error="Please, leave us a message."></textarea> </div>
-                                <div id="invalid-message" class="error"></div>
+                        <div class="mb-3" data-aos="fade-up" data-aos-duration="1000">
+                            <label for="email">Email *</label>
+                            <input type="email" class="contact__fields" id="email" placeholder="you@example.com" required="">
+                            <div id="invalid-email" class="error">
                         </div>
-                        <div class="col-md-12" data-aos="fade-up" data-aos-duration="1000"> <input type="submit" class="btn btn-send pt-2 contact__button" value="Send Message"> </div>
-                    </div>
+                        <div class="mb-3" data-aos="fade-up" data-aos-duration="1000">
+                            <label for="subject">Subject </label>
+                            <input type="subject" class="contact__fields" id="subject" placeholder="Subject" required="">
+                            <div id="invalid-email" class="error">
+                        </div>
+                        </div>
+                        <div class="form-group" data-aos="fade-up" data-aos-duration="1000"> 
+                            <label for="form_message">Your Message*</label> 
+                            <textarea id="form_message" name="message" class="contact__fields contact__message" placeholder="Please write your message here." rows="4" required="required" data-error="Please, leave us a message."></textarea> </div>
+                            <div id="invalid-message" class="error"></div>
+                        </div>
+                        <input type="submit" class="btn btn-send pt-2 contact__button" value="Send Message" data-aos="fade-up" data-aos-duration="1000"> 
                     </form>
+                </div>
+                <div class="col-4" data-aos="fade-up" data-aos-duration="2000">
+                    <h4>Contact</h4>
+                    <div>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                            <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+                        </svg>
+                        <a href="mailto:andreeamrg@gmail.com">email@loremipsum.com</a><br /><br />
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-fill" viewBox="0 0 16 16">
+                            <path d="M4.146.146A.5.5 0 0 1 4.5 0h7a.5.5 0 0 1 .5.5c0 .68-.342 1.174-.646 1.479-.126.125-.25.224-.354.298v4.431l.078.048c.203.127.476.314.751.555C12.36 7.775 13 8.527 13 9.5a.5.5 0 0 1-.5.5h-4v4.5c0 .276-.224 1.5-.5 1.5s-.5-1.224-.5-1.5V10h-4a.5.5 0 0 1-.5-.5c0-.973.64-1.725 1.17-2.189A5.921 5.921 0 0 1 5 6.708V2.277a2.77 2.77 0 0 1-.354-.298C4.342 1.674 4 1.179 4 .5a.5.5 0 0 1 .146-.354z"/>
+                        </svg>
+                        Lorem Office <br />
+                        222 Street in Bournemouth<br />
+                        Bournemouth <br />
+                        BH10 YYY <br />
+                        United Kingdom <br /> <br />
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                        </svg>
+                        +44 (0) 1215451512
+                    </div>
                 </div>
             </div>
         </div>
