--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,5 +4,5 @@
 <script src="/dist/js/jquery-3.6.0.min.js"></script>
 <script src="/dist/js/main.js"></script>
 <script src="/dist/js/bootstrap.min.js"></script>
- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+ <script src="/dist/js/aos.js"></script>
 <script>AOS.init();</script>
