--- a/static/src/scss/main.scss
+++ b/static/src/scss/main.scss
@@ -1,10 +1,8 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 $primary-color: #c7493a;
 $secondary-color: #a33327;
-$tertiary-color: #689775;
-$quaternary-color: #917164;
-$quaternary-color-reduced-opacity: rgba(173,129,116, 0.5);
-$quinary-color: #ad8174;
+$tertiary-color: #917164;
+$quaternary-color: #ad8174;
 $white: #FFF;
 $black: #000;
 $grey: #5c5a59;
@@ -32,14 +30,12 @@ body {
 
 a {
     text-decoration: none;
-    color: $white;
+    color: $black;
 
     &:hover,
     &:focus {
         text-decoration: none;
         color: $primary-color;
-        border: 3px solid $primary-color;  
-        background-color: $white;
     }
 }
 
@@ -49,8 +45,9 @@ a {
     
     &:hover,
     &:focus {
-        color: $primary-color;
-        border: 3px solid $primary-color;   
+        color: $black;
+        border: 3px solid $primary-color;
+        background-color: $white;
     }
 }
 
@@ -63,16 +60,14 @@ a {
     }
     
     &__section {
-        background-image: url("../images/loremipsum.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
+        background-image: linear-gradient($quaternary-color, $white);
     }
 }
 
 .full-width {
     min-width: 100%;
-    background-color: $quaternary-color-reduced-opacity;
     margin-bottom: 50px;
+    border-bottom: 2px solid $quaternary-color;
 }
 
 
@@ -126,7 +121,7 @@ h1 {
     }
 
     &__bottom-content {
-        margin: 10rem 5rem 5rem 3rem;
+        margin: 3rem 5rem 5rem 3rem;
 
         @media only screen and (max-width: 600px)  {
         margin: 1rem 0;
@@ -163,7 +158,7 @@ h1 {
 
         &:hover,
         &:focus {
-            border: 2px solid $secondary-color;
+            border: 2px solid $black;
             color: $black;
             background-color: $grey-light;
             }
